theme(fix): spacing below youtube shortcode

--- a/assets/scss/03-theme/_article.scss
+++ b/assets/scss/03-theme/_article.scss
@@ -93,3 +93,7 @@ figcaption {
   font-size: 0.9rem;
   width: 100%;
 }
+
+.shortcode--youtube {
+  @extend .mb-3;
+}
